--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
             padding: 1.5rem;
             transition: all 0.3s ease;
             backdrop-filter: blur(10px);
-            align-content: center;
+            justify-items: center;
         }
 
         .feature-card:hover {
@@ -879,7 +879,6 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 1.5rem;
-            margin-left: 20%;
             font-size: 1.5rem;
         }
 
