rename section title classes

--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@
     <section class="features">
         <div class="container">
             <div class="features-header">
-                <h2 class="section-title">How CHRONOS Works</h2>
+                <h2 class="features-section-title">How CHRONOS Works</h2>
             </div>
 
             <div class="features-grid">
@@ -1326,7 +1326,7 @@
     <!-- Protection Section -->
     <section class="protection-section">
         <div class="container">
-            <h2 class="section-title">Architecture</h2>
+            <h2 class="protection-section-title">Architecture</h2>
             <p class="section-subtitle">We built what we couldn't find: a platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architectur</p>
 
             <div class="protection-grid">
