--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 20255555 CHRONOS. All rights reserved.</p>
+                <p>&copy; 2025 CHRONOS. All rights reserved.</p>
             </div>
         </div>
     </footer>
