Floating button color

--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
               position: fixed;
               bottom: 24px;
               right: 24px;
-              background-color: #00FFD1; /* Bright cyan or neon green */
+              background-color: #960FD9;
               color: #000; /* High contrast text */
               padding: 14px 24px;
               border-radius: 999px;
