move subtitle for video

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 }
 
 .trading-title {
-    margin-bottom: 2rem;
+    /*margin-bottom: 2rem;*/
 }
 
 .trading-title h1{
@@ -190,8 +190,7 @@
 }
 
 .trading-subtitle {
-    margin-top: 3rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .trading-subtitle h1 {
@@ -1190,6 +1189,9 @@
         <div class="trading-title">
             <h1>CHRONOSX</h1>
         </div>
+        <div class="trading-subtitle">
+            <h1>Buy ETH, BSC, Base & Arbitrum tokens using only Solana - no bridging needed</h1>
+        </div>
         <div class="trading-video">
             <div class="ambient-glow"></div>
             <div class="fluid-frame">
@@ -1203,9 +1205,6 @@
             <div class="video-placeholder">
                 App Demo Video Placeholder
             </div>
-        </div>
-        <div class="trading-subtitle">
-            <h1>Buy ETH, BSC, Base & Arbitrum tokens using only Solana - no bridging needed</h1>
         </div>
     </section>
     <!-- Tabbed Features Section -->
