Aligh features again

--- a/index.html
+++ b/index.html
@@ -845,6 +845,7 @@
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
             margin-bottom: 4rem;
+            justify-items: center;
         }
 
         .feature-card {
@@ -854,6 +855,7 @@
             padding: 1.5rem;
             transition: all 0.3s ease;
             backdrop-filter: blur(10px);
+            display: grid;
             justify-items: center;
         }
 
