feature cards: remove background; center text

--- a/index.html
+++ b/index.html
@@ -864,6 +864,7 @@
             display: grid;
             justify-items: center;
             max-width: 300px;
+            text-align: center;
         }
 
         .feature-card:hover {
@@ -881,7 +882,6 @@
         .feature-icon {
             width: 200px;
             height: 200px;
-            background: linear-gradient(135deg, #00d4ff, #9333ea);
             border-radius: 1px;
             display: flex;
             align-items: center;
