media queries for speed metrics tabs

--- a/index.html
+++ b/index.html
@@ -564,6 +564,11 @@
             margin: 0 auto;
         }
 
+        @media (max-width: 1040px) {
+             .speed-metrics-tabs {
+             grid-template-columns: 1fr;
+        }
+
         .metric-tab {
             background: rgba(255, 255, 255, 0.05);
             border-radius: 2px;
