--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHRONOS - The Future of Trading<br>, Reimagined</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&display=swap">
     <style>
         * {
             margin: 0;
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Abel', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'Abel', 'Helvetica Neue', 'Segoe UI', 'Roboto', sans-serif;
             line-height: 1.6;
             color: #ffffff;
             background: #0a0a0a;
