--- a/index.html
+++ b/index.html
@@ -193,10 +193,7 @@
     font-size: 2vw;
     font-weight: 800;
     margin-bottom: 1.5rem;
-    background: linear-gradient(90deg, #9300AD, #8000ff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+    color: #a0a0a0;
 }
 
 .trading-video {
