feautre-card: min-width -> width

--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
             backdrop-filter: blur(10px);
             display: grid;
             justify-items: center;
-            max-width: 300px;
+            width: 300px;
             text-align: center;
         }
 
