Reshape rewards title

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             padding-left: 2rem;
         }
 
-        .rewards-text h3 {
+        .rewards-title h3 {
             font-size: 2.5rem;
             font-weight: 700;
             margin-bottom: 1.5rem;
@@ -1250,9 +1250,11 @@
 
             <!-- REAL Rewards Tab Content -->
             <div class="tab-content" id="real-rewards">
+                <div style="rewards-title">
+                    <h3>Earn While You Trade</h3>
+                </div>
                 <div class="rewards-content">
                     <div class="rewards-text">
-                        <h3>Earn While You Trade</h3>
                         <p>Experience a revolutionary reward system where every trade, every interaction, and every milestone unlocks real value. Our multi-tier system ensures that active traders are recognized and rewarded.</p>
 
                         <ul class="rewards-features">
