style-> class for rewards-title; rmeove podium titles

--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
 
             <!-- REAL Rewards Tab Content -->
             <div class="tab-content" id="real-rewards">
-                <div style="rewards-title">
+                <div class="rewards-title">
                     <h3>Earn While You Trade</h3>
                 </div>
                 <div class="rewards-content">
@@ -1269,19 +1269,19 @@
 
                     <div class="podium-container">
                         <div class="podium-tier">
-                            <div class="tier-label">Bronze</div>
+                            <div class="tier-label"></div>
                             <div class="podium-step bronze"></div>
                         </div>
                         <div class="podium-tier">
-                            <div class="tier-label">Silver</div>
+                            <div class="tier-label"></div>
                             <div class="podium-step silver"></div>
                         </div>
                         <div class="podium-tier">
-                            <div class="tier-label">Gold</div>
+                            <div class="tier-label"></div>
                             <div class="podium-step gold"></div>
                         </div>
                         <div class="podium-tier">
-                            <div class="tier-label">Platinum</div>
+                            <div class="tier-label"></div>
                             <div class="podium-step platinum"></div>
                         </div>
                     </div>
