update rewards format

--- a/index.html
+++ b/index.html
@@ -613,6 +613,13 @@
             background-clip: text;
         }
 
+        .rewards-subtitle h3 {
+            font-size: 1.5rem;
+            font-weight: 700;
+            margin-bottom: 1.5rem;
+            color: #a0a0a0;
+        }
+
         .rewards-text p {
             color: #a0a0a0;
             line-height: 1.7;
@@ -1253,18 +1260,13 @@
                 <div class="rewards-title">
                     <h3>Earn While You Trade</h3>
                 </div>
+                <div class="rewards-subtitle">
+                    <h3>Like flying miles - The more you trade, the more you earn</h3>
+                </div>
                 <div class="rewards-content">
                     <div class="rewards-text">
                         <p>Experience a revolutionary reward system where every trade, every interaction, and every milestone unlocks real value. Our multi-tier system ensures that active traders are recognized and rewarded.</p>
 
-                        <ul class="rewards-features">
-                            <li>Progressive reward multipliers</li>
-                            <li>Exclusive access to premium features</li>
-                            <li>Community recognition badges</li>
-                            <li>Monthly bonus distributions</li>
-                            <li>VIP trading tournaments</li>
-                            <li>Achieve lower transaction fees</li>
-                        </ul>
                     </div>
 
                     <div class="podium-container">
