center rewards title/subtitle

--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            text-align: center;
         }
 
         .rewards-subtitle h3 {
@@ -618,6 +619,7 @@
             font-weight: 700;
             margin-bottom: 1.5rem;
             color: #a0a0a0;
+            text-align: center;
         }
 
         .rewards-text p {
