--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             color: #a0a0a0;
             line-height: 1.7;
             margin-bottom: 2rem;
-            font-size: 1.1rem;
+            font-size: 1.5rem;
         }
 
         .rewards-features {
@@ -653,6 +653,7 @@
             align-items: flex-end;
             height: 300px;
             gap: 1rem;
+            padding-bottom: 3rem;
         }
 
         .podium-tier {
