reformat podium container

--- a/index.html
+++ b/index.html
@@ -651,9 +651,15 @@
             display: flex;
             justify-content: center;
             align-items: flex-end;
-            height: 300px;
             gap: 1rem;
             padding-bottom: 3rem;
+        }
+
+        .podium-graph {
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            gap: 1rem;
         }
 
         .podium-tier {
@@ -1273,21 +1279,23 @@
                     </div>
 
                     <div class="podium-container">
-                        <div class="podium-tier">
-                            <div class="tier-label"></div>
-                            <div class="podium-step bronze"></div>
-                        </div>
-                        <div class="podium-tier">
-                            <div class="tier-label"></div>
-                            <div class="podium-step silver"></div>
-                        </div>
-                        <div class="podium-tier">
-                            <div class="tier-label"></div>
-                            <div class="podium-step gold"></div>
-                        </div>
-                        <div class="podium-tier">
-                            <div class="tier-label"></div>
-                            <div class="podium-step platinum"></div>
+                        <div class="podium-graph">
+                            <div class="podium-tier">
+                                <div class="tier-label"></div>
+                                <div class="podium-step bronze"></div>
+                            </div>
+                            <div class="podium-tier">
+                                <div class="tier-label"></div>
+                                <div class="podium-step silver"></div>
+                            </div>
+                            <div class="podium-tier">
+                                <div class="tier-label"></div>
+                                <div class="podium-step gold"></div>
+                            </div>
+                            <div class="podium-tier">
+                                <div class="tier-label"></div>
+                                <div class="podium-step platinum"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
