add subtitle to podium

--- a/index.html
+++ b/index.html
@@ -649,6 +649,7 @@
 
         .podium-container {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: flex-end;
             gap: 1rem;
@@ -660,6 +661,10 @@
             justify-content: center;
             align-items: flex-end;
             gap: 1rem;
+        }
+
+        .podium-subtitle h3 {
+
         }
 
         .podium-tier {
@@ -1296,6 +1301,9 @@
                                 <div class="tier-label"></div>
                                 <div class="podium-step platinum"></div>
                             </div>
+                        </div>
+                        <div class="podium-subtitle">
+                            <h3>Real, tangible prizes such as iPhones, laptops, court side sports tickets, paid vacations trips, cars, and much more!</h3>
                         </div>
                     </div>
                 </div>
