--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-end;
+            justify-items: center;
             gap: 1rem;
             padding-bottom: 3rem;
         }
@@ -664,7 +664,10 @@
         }
 
         .podium-subtitle h3 {
-
+            color: #a0a0a0;
+            line-height: 1.7;
+            margin-bottom: 2rem;
+            font-size: 1rem;
         }
 
         .podium-tier {
