--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
                 </div>
                 <div class="rewards-content">
                     <div class="rewards-text">
-                        <p>Experience a revolutionary reward system where every trade, every interaction, and every milestone unlocks real value through a points system. Our multi-tier system ensures that active traders are recognized and rewarded based on their engagement and activity.</p>
+                        <p>Experience a revolutionary reward system where every trade, every interaction, and every milestone unlocks real value through a points system. Our multi-tier system ensures that traders are recognized and rewarded based on their engagement and activity.</p>
 
                     </div>
 
