--- a/index.html
+++ b/index.html
@@ -1319,35 +1319,13 @@
                     <p>Unlock achievements, earn badges, and compete with traders worldwide in our gamified ecosystem.</p>
 
                     <div class="badges-preview">
+                        <div class="gamification-description">
+                            <p>Chronos' Battle Royale turns trading into a high-stakes tournament where users compete in real-time challenges across formats like time-based sprints, volume races, PNL percentages, and more. Our KOL Wars elevate the game by letting top crypto influencers lead teams from their own communities in ultimate competitive showdowns.</p>
+                        </div>
                         <div class="badge">
                             <div class="badge-icon">🏆</div>
                             <div class="badge-name">First Blood</div>
                             <div class="badge-desc">Complete your first trade</div>
-                        </div>
-                        <div class="badge">
-                            <div class="badge-icon">⚡</div>
-                            <div class="badge-name">Rampage</div>
-                            <div class="badge-desc">Execute 10 trades in under 60 seconds</div>
-                        </div>
-                        <div class="badge">
-                            <div class="badge-icon">💎</div>
-                            <div class="badge-name">Camper</div>
-                            <div class="badge-desc">Hold a position for 30+ days</div>
-                        </div>
-                        <div class="badge">
-                            <div class="badge-icon">🎯</div>
-                            <div class="badge-name">Headshot</div>
-                            <div class="badge-desc">Hit 5 consecutive profitable trades</div>
-                        </div>
-                        <div class="badge">
-                            <div class="badge-icon">👾</div>
-                            <div class="badge-name">Killing Spree</div>
-                            <div class="badge-desc">Hit 10 consecutive profitable trades</div>
-                        </div>
-                        <div class="badge">
-                            <div class="badge-icon">🤖</div>
-                            <div class="badge-name">Bot</div>
-                            <div class="badge-desc">Hit 20 consecutive profitable trades</div>
                         </div>
                     </div>
                 </div>
