adjust paragraphs in gamification

--- a/index.html
+++ b/index.html
@@ -736,8 +736,14 @@
 
         .gamification-content p {
             color: #a0a0a0;
-            font-size: 1.1rem;
+            font-size: 1.5rem;
+            font-weight: 700;
             margin-bottom: 3rem;
+        }
+
+        .gamification-description p {
+            color: #a0a0a0;
+            font-size: 1.1rem;
         }
 
         .badges-preview {
