--- a/index.html
+++ b/index.html
@@ -1329,9 +1329,9 @@
                             <p>Chronos' Battle Royale turns trading into a high-stakes tournament where users compete in real-time challenges across formats like time-based sprints, volume races, PNL percentages, and more. Our KOL Wars elevate the game by letting top crypto influencers lead teams from their own communities in ultimate competitive showdowns.</p>
                         </div>
                         <div class="badge">
-                            <div class="badge-icon">🏆</div>
-                            <div class="badge-name">First Blood</div>
-                            <div class="badge-desc">Complete your first trade</div>
+                            <div class="badge-icon">
+                                <img src="assets/images/landing/game_badge.png" />
+                            </div>
                         </div>
                     </div>
                 </div>
