remove badges class from badge picture (leave styles JIC); align items

--- a/index.html
+++ b/index.html
@@ -752,6 +752,7 @@
             gap: 6rem;
             max-width: 600px;
             margin: 0 auto;
+            align-items: center;
         }
 
         .badge {
@@ -1328,7 +1329,7 @@
                         <div class="gamification-description">
                             <p>Chronos' Battle Royale turns trading into a high-stakes tournament where users compete in real-time challenges across formats like time-based sprints, volume races, PNL percentages, and more. Our KOL Wars elevate the game by letting top crypto influencers lead teams from their own communities in ultimate competitive showdowns.</p>
                         </div>
-                        <div class="badge">
+                        <div class="">
                             <div class="badge-icon">
                                 <img src="assets/images/landing/game_badge.png" />
                             </div>
