add watches to rewards

--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
                             </div>
                         </div>
                         <div class="podium-subtitle">
-                            <h3>Real, tangible prizes such as iPhones, laptops, court side sports tickets, paid vacations trips, cars, and much more!</h3>
+                            <h3>Real, tangible prizes such as iPhones, watches, laptops, court side sports tickets, paid vacations trips, cars, and much more!</h3>
                         </div>
                     </div>
                 </div>
