align text left on gamification description

--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@
         .gamification-description p {
             color: #a0a0a0;
             font-size: 1.1rem;
+            text-align: center;
         }
 
         .badges-preview {
