Responsive architecture slides -> 1 column or 3 only

--- a/index.html
+++ b/index.html
@@ -991,6 +991,12 @@
             align-items: start;
         }
 
+        @media (max-width: 1040px) {
+             .protection-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
         .protection-item {
             background: rgba(255, 255, 255, 0.03);
             border-radius: 2px;
