--- a/index.html
+++ b/index.html
@@ -1101,6 +1101,13 @@
             text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
         }
 
+        /* Chronos Gives */
+
+        .chronos-gives {
+            padding: 6rem 2rem;
+            background: linear-gradient(180deg, #0f172a 0%, #1a1a2e 100%);
+        }
+
         /* Footer */
         .footer {
             padding: 3rem 2rem 1rem;
@@ -1398,6 +1405,9 @@
         </div>
     </section>
 
+    <!-- CHRONOS Gives Back Section -->
+    <section class="chronos-gives">
+    </section>
 
     <!-- Footer -->
     <footer class="footer" id="contact">
