fix text alignemnt in gamification

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
         .gamification-description p {
             color: #a0a0a0;
             font-size: 1.1rem;
-            text-align: center;
+            text-align: left;
         }
 
         .badges-preview {
