Architecture responsiveness + text alignment

--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
             align-items: start;
         }
 
-        @media (max-width: 1040px) {
+        @media (max-width: 1200px) {
              .protection-grid {
                 grid-template-columns: 1fr;
             }
@@ -1014,11 +1014,13 @@
             font-size: 1.5rem;
             margin-bottom: 1rem;
             color: #ffffff;
+            text-align: center;
         }
 
         .protection-item p {
             color: #a0a0a0;
             line-height: 1.7;
+            text-align: center;
         }
 
         /* Stats Section */
