fix gamification padding

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         /* Gamification Tab Content */
         .gamification-content {
             text-align: center;
-            padding: 3rem 0;
+            padding-bottom: 3rem;
         }
 
         .gamification-content h3 {
