--- a/index.html
+++ b/index.html
@@ -997,6 +997,12 @@
             }
         }
 
+        @media (min-width: 1200px) {
+             .protection-item {
+                min-height: 260px;
+            }
+        }
+
         .protection-item {
             background: rgba(255, 255, 255, 0.03);
             border-radius: 2px;
