Add Chronos gives content

--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,25 @@
             background: linear-gradient(180deg, #0f172a 0%, #1a1a2e 100%);
         }
 
+        .gives-section-title {
+            font-size: 2.5rem;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 1rem;
+            background: linear-gradient(135deg, #E893FA, #9333ea);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .chronos-gives p{
+            text-align: center;
+            color: #a0a0a0;
+            margin-bottom: 4rem;
+            font-size: 1.1rem;
+        }
+
+
         /* Footer */
         .footer {
             padding: 3rem 2rem 1rem;
@@ -1415,6 +1434,12 @@
 
     <!-- CHRONOS Gives Back Section -->
     <section class="chronos-gives">
+        <div class="container">
+            <h2 class="gives-section-title">How Chronos Gives Back -- Trading for Good</h2>
+            <p>Chronos donates 2-3% of <strong>Monthly Recurring Revenue (MRR)</strong> to donate.gg and other impactful initiatives aimed at creating real-world change.</p>
+            <p>All donations are <strong>publicly tracked on-chain</strong>, ensuring transparency and trust. Your trading doesn't just benefit you - it contributes to <strong>global causes</strong> that matter.</p>
+            <p>Chronos isn't built for <strong>speed, rewards and competition</strong> - it's built to help <strong>change</strong> the world.</p>
+        </div>
     </section>
 
     <!-- Footer -->
