--- a/index.html
+++ b/index.html
@@ -1120,17 +1120,17 @@
             font-size: 2.5rem;
             font-weight: 700;
             text-align: center;
-            margin-bottom: 1rem;
-            background: linear-gradient(135deg, #E893FA, #9333ea);
+            margin-bottom: 3rem;
+            background: linear-gradient(135deg, #a0a0a0, #9333ea, #AA00CC);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
 
         .chronos-gives p{
-            text-align: center;
+            text-align: left;
             color: #a0a0a0;
-            margin-bottom: 4rem;
+            margin-bottom: 1rem;
             font-size: 1.1rem;
         }
 
@@ -1435,7 +1435,7 @@
     <!-- CHRONOS Gives Back Section -->
     <section class="chronos-gives">
         <div class="container">
-            <h2 class="gives-section-title">How Chronos Gives Back -- Trading for Good</h2>
+            <h2 class="gives-section-title">How Chronos Gives Back &mdash; Trading for Good</h2>
             <p>Chronos donates 2-3% of <strong>Monthly Recurring Revenue (MRR)</strong> to donate.gg and other impactful initiatives aimed at creating real-world change.</p>
             <p>All donations are <strong>publicly tracked on-chain</strong>, ensuring transparency and trust. Your trading doesn't just benefit you - it contributes to <strong>global causes</strong> that matter.</p>
             <p>Chronos isn't built for <strong>speed, rewards and competition</strong> - it's built to help <strong>change</strong> the world.</p>
