align chronos gives txt and use <br> instead of separate <p>

--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
         }
 
         .chronos-gives p{
-            text-align: left;
+            text-align: center;
             color: #a0a0a0;
             margin-bottom: 1rem;
             font-size: 1.1rem;
@@ -1436,9 +1436,9 @@
     <section class="chronos-gives">
         <div class="container">
             <h2 class="gives-section-title">How Chronos Gives Back &mdash; Trading for Good</h2>
-            <p>Chronos donates 2-3% of <strong>Monthly Recurring Revenue (MRR)</strong> to donate.gg and other impactful initiatives aimed at creating real-world change.</p>
-            <p>All donations are <strong>publicly tracked on-chain</strong>, ensuring transparency and trust. Your trading doesn't just benefit you - it contributes to <strong>global causes</strong> that matter.</p>
-            <p>Chronos isn't built for <strong>speed, rewards and competition</strong> - it's built to help <strong>change</strong> the world.</p>
+            <p>Chronos donates 2-3% of <strong>Monthly Recurring Revenue (MRR)</strong> to donate.gg and other impactful initiatives aimed at creating real-world change.
+            <br>All donations are <strong>publicly tracked on-chain</strong>, ensuring transparency and trust. Your trading doesn't just benefit you - it contributes to <strong>global causes</strong> that matter.
+            <br>Chronos isn't built for <strong>speed, rewards and competition</strong> - it's built to help <strong>change</strong> the world.</p>
         </div>
     </section>
 
