re-align chronos gives section

--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,12 @@
             background: linear-gradient(180deg, #0f172a 0%, #1a1a2e 100%);
         }
 
+        .chronos-gives .container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         .gives-section-title {
             font-size: 2.5rem;
             font-weight: 700;
@@ -1128,7 +1134,7 @@
         }
 
         .chronos-gives p{
-            text-align: center;
+            text-align: left;
             color: #a0a0a0;
             margin-bottom: 1rem;
             font-size: 1.1rem;
