move header -> transparent

--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
 
         /* Hero Section */
         .hero {
-            min-height: 80vh;
+            padding-bottom: 6rem;
             background-image: url("assets/images/landing/hero_background.webp");/*linear-gradient(135deg, #1a0b2e 0%, #4c1d95 20%, #7c3aed 40%, #a855f7 60%, #00d4ff 80%, #0ea5e9 100%);*/
             background-size: cover;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -1243,18 +1242,18 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <nav class="nav">
-            <div class="logo">
-                <img src="assets/images/landing/header_logo.webp"/>
-            </div>
-            <a href="#contact" class="nav-link">Contact Us</a>
-        </nav>
-    </header>
 
     <!-- Hero Section -->
     <section class="hero">
+        <!-- Header -->
+        <header class="header">
+            <nav class="nav">
+                <div class="logo">
+                    <img src="assets/images/landing/header_logo.webp"/>
+                </div>
+                <a href="#contact" class="nav-link">Contact Us</a>
+            </nav>
+        </header>
         <div class="hero-content">
             <h1>The Future of Trading, Reimagined</h1>
             <p class="hero-subtitle">Fast. Social. Rewarding.</p>
