--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         /* Trading Video Section */
 .trading-showcase {
     padding: 4rem 2rem;
+    padding-bottom: 6rem;
     background: linear-gradient(180deg, #1e293b 0%, #230448 50%, #190045 80%, #0f172a 100%);
     display: flex;
     flex-direction: column;
