resize gamification badge

--- a/index.html
+++ b/index.html
@@ -774,6 +774,10 @@
             margin-bottom: 1rem;
         }
 
+        .badge-icon img {
+            height: 300px;
+        }
+
         .badge-name {
             color: #ffffff;
             font-weight: 600;
