update speed captions

--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@
     <section class="tabbed-features">
         <div class="tabs-container">
             <nav class="tabs-nav">
-                <button class="tab-button active" data-tab="elite-speed">Elite TX Speeds</button>
+                <button class="tab-button active" data-tab="elite-speed">Unmatched Speeds</button>
                 <button class="tab-button" data-tab="real-rewards">REAL Rewards</button>
                 <button class="tab-button" data-tab="gamification">Gamification</button>
             </nav>
@@ -1317,16 +1317,16 @@
 
                     <div class="speed-metrics-tabs">
                         <div class="metric-tab">
-                            <div class="metric-value-tab">&lt;1ms</div>
-                            <div class="metric-label-tab">Transaction Latency</div>
+                            <div class="metric-value-tab">Custom RPC Infrastructure</div>
+                            <div class="metric-label-tab">Privacy & Reliability</div>
                         </div>
                         <div class="metric-tab">
-                            <div class="metric-value-tab">99.9%</div>
-                            <div class="metric-label-tab">Uptime</div>
+                            <div class="metric-value-tab">147ms Transaction Latency</div>
+                            <div class="metric-label-tab">Real-time transactions</div>
                         </div>
                         <div class="metric-tab">
-                            <div class="metric-value-tab">0-Slot</div>
-                            <div class="metric-label-tab">Fastest on Solana</div>
+                            <div class="metric-value-tab">6.5x Faster than competitors</div>
+                            <div class="metric-label-tab">The ultimate trading edge</div>
                         </div>
                     </div>
                 </div>
