add feature arrows

--- a/index.html
+++ b/index.html
@@ -1406,8 +1406,16 @@
                 </div>
 
                 <div class="feature-card">
+                    <div class="feature-arrow"><img src="assets/images/landing/arrow1.svg" /></div>
+                </div>
+
+                <div class="feature-card">
                     <div class="feature-icon"><img src="assets/images/landing/coins.png" /></div>
                     <h3>Set orders, customize transaction fees and optimize execution</h3>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-arrow"><img src="assets/images/landing/arrow2.svg" /></div>
                 </div>
 
                 <div class="feature-card">
