--- a/index.html
+++ b/index.html
@@ -914,6 +914,9 @@
             box-shadow: 0 10px 40px rgba(0, 212, 255, 0.1);
         }
 
+        .feature-arrow {
+            align-content: center;
+        }
 
         .feature-icon-wrapper {
             display: flex;
@@ -1410,8 +1413,8 @@
                     <h3>Connect any crypto wallet</h3>
                 </div>
 
-                <div class="feature-card">
-                    <div class="feature-arrow"><img src="assets/images/landing/arrow1.svg" /></div>
+                <div class="feature-arrow">
+                    <div class="feature-arrow"><img src="assets/images/landing/arrow_1.svg" /></div>
                 </div>
 
                 <div class="feature-card">
@@ -1419,8 +1422,8 @@
                     <h3>Set orders, customize transaction fees and optimize execution</h3>
                 </div>
 
-                <div class="feature-card">
-                    <div class="feature-arrow"><img src="assets/images/landing/arrow2.svg" /></div>
+                <div class="feature-arrow">
+                    <div class="feature-arrow"><img src="assets/images/landing/arrow_2.svg" /></div>
                 </div>
 
                 <div class="feature-card">
