--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             gap: 3rem;
-            align-items: start;
+            place-items: center;
         }
 
         @media (max-width: 1200px) {
@@ -1021,6 +1021,7 @@
             padding: 2.5rem;
             border: 1px solid rgba(255, 255, 255, 0.08);
             transition: all 0.3s ease;
+            max-width: 60vw;
         }
 
         .protection-item:hover {
