fix responsive width on protection-frid items

--- a/index.html
+++ b/index.html
@@ -1007,6 +1007,10 @@
              .protection-grid {
                 grid-template-columns: 1fr;
             }
+
+             .protection-item {
+                width: 60vw;
+             }
         }
 
         @media (min-width: 1200px) {
@@ -1021,7 +1025,6 @@
             padding: 2.5rem;
             border: 1px solid rgba(255, 255, 255, 0.08);
             transition: all 0.3s ease;
-            max-width: 60vw;
         }
 
         .protection-item:hover {
