real rewards subtitle: h3 -> p

--- a/index.html
+++ b/index.html
@@ -614,9 +614,7 @@
             text-align: center;
         }
 
-        .rewards-subtitle h3 {
-            font-size: 1.5rem;
-            font-weight: 700;
+        .rewards-subtitle p {
             margin-bottom: 1.5rem;
             color: #a0a0a0;
             text-align: center;
