actually convert <h3> to <p> in rewards subtitle

--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@
                     <h3>Earn While You Trade</h3>
                 </div>
                 <div class="rewards-subtitle">
-                    <h3>Like flying miles - The more you trade, the more you earn</h3>
+                    <p>Like flying miles - The more you trade, the more you earn</p>
                 </div>
                 <div class="rewards-content">
                     <div class="rewards-text">
