adjust text in rewards slide

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
             color: #a0a0a0;
             line-height: 1.7;
             margin-bottom: 2rem;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
         }
 
         .rewards-features {
@@ -661,11 +661,12 @@
             gap: 1rem;
         }
 
-        .podium-subtitle h3 {
+        .podium-subtitle p {
             color: #a0a0a0;
             line-height: 1.7;
             margin-bottom: 2rem;
             font-size: 1rem;
+            text-align: center;
         }
 
         .podium-tier {
@@ -1376,7 +1377,7 @@
                             </div>
                         </div>
                         <div class="podium-subtitle">
-                            <h3>Real, tangible prizes such as iPhones, watches, laptops, court side sports tickets, paid vacations trips, cars, and much more!</h3>
+                            <p>Real, tangible prizes such as iPhones, watches, laptops, court side sports tickets, paid vacations trips, cars, and much more!</p>
                         </div>
                     </div>
                 </div>
