--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@
             <div class="tab-content" id="gamification">
                 <div class="gamification-content">
                     <h3>Level Up Your Trading</h3>
-                    <p>Unlock achievements, earn badges, and compete with traders worldwide in our gamified ecosystem.</p>
+                    <p>Unlock achievements, earn badges, and compete with traders worldwide in our gamified ecosystem</p>
 
                     <div class="badges-preview">
                         <div class="gamification-description">
