--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
         }
 
         .chronos-gives p{
-            text-align: left;
+            text-align: center;
             color: #a0a0a0;
             margin-bottom: 1rem;
             font-size: 1.1rem;
