--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
     <section class="protection-section">
         <div class="container">
             <h2 class="protection-section-title">Architecture</h2>
-            <p class="section-subtitle">We built what we couldn't find: a platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architectur</p>
+            <p class="section-subtitle">We built what we couldn't find: a platform where security and ownership come first. Your assets remain 100% on-chain across multiple blockchains through our non-custodial architecture</p>
 
             <div class="protection-grid">
                 <div class="protection-item">
