--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,10 @@
             <div class="particle particle-2"></div>
             <div class="particle particle-3"></div>
             <div class="video-placeholder">
-                App Demo Video Placeholder
+                <video width="320" height="240" autoplay loop muted>
+                    <source src="assets/images/landing/demo_video.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </div>
     </section>
