--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@
             <div class="particle particle-2"></div>
             <div class="particle particle-3"></div>
             <div class="video-placeholder">
-                <video width="320" height="240" autoplay loop muted>
+                <video width="100%" height="100%" autoplay loop muted>
                     <source src="assets/images/landing/demo_video.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
