--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
 }
 
+.trading-video video {
+    height: 400px;
+}
+
 /* Fluid Frame Effects */
 .fluid-frame {
     position: absolute;
@@ -445,6 +449,10 @@
     .trading-video {
         height: 300px;
         max-width: 90%;
+    }
+
+    .trading-video video {
+        height: 300px;
     }
 
     .fluid-frame {
