--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
 }
 
 .trading-video video {
+    display: block;            /* remove inline spacing quirks */
+    width: 100%;
     height: 400px;
+    object-fit: cover;
 }
 
 /* Fluid Frame Effects */
@@ -1313,7 +1316,7 @@
             <div class="particle particle-2"></div>
             <div class="particle particle-3"></div>
             <div class="video-placeholder">
-                <video width="100%" height="100%" autoplay loop muted>
+                <video autoplay loop muted playsinline>
                     <source src="assets/images/landing/demo_video.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
